--- a/.github /workflows/azure-devops-webapp-CD.yml
+++ b/.github /workflows/azure-devops-webapp-CD.yml
@@ -43,13 +43,13 @@ jobs:
           name: trained-model
           path: model.joblib
 
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-app
-          path: |
-            release.zip
-            !venv/
+    #  - name: Upload artifact for deployment jobs
+    #   uses: actions/upload-artifact@v3
+    #    with:
+    #      name: python-app
+    #      path: |
+    #        release.zip
+     #       !venv/
 
   deploy:
     runs-on: ubuntu-latest
